# payment_processor-rinha_backend_2025

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  info.json  main.py  nginx.conf  partial-results.json  payments.json  pyproject.toml  requirements.txt
api/: Dockerfile  __init__.py  main.py  pyproject.toml
api/config/: __init__.py  celery_app.py  config.py  duck_db.py  logger.py  postgres.py  postgresDB.py  settings.py  tiny_db.py
api/config/interface/: __init__.py  db_interface.py
api/infra/: http_client.py  postgres_client.py  redis_client.py
api/models/: model.py
api/router/: router.py
api/schemas/: schema.py
api/services/: consumer.py  health_check.py  http_client.py  payments.py  queue.py  redis_client.py  tasks.py
api/utils/: format_timestamp.py
api/worker/: summary.py  tasks.py
payment-processor/: docker-compose.yml
worker/: Dockerfile  main.py  pyproject.toml
worker/config/: __init__.py  postgresDB.py  settings.py
worker/services/: tasks.py  worker.py
